embr-app/src/App.css
.dashboard-container{
  background-color: #F8F8FC;
  padding: 20px;
  height: 1500px;
  margin-left: 100px;
  margin-right: 100px;
}

.logo {
  max-width: 150px; 
  height: auto; 
}

.container{
  width: 100%;
  padding: 20px;
  border: 2px solid #ebdc0e;
}

.title{
  text-align: center;
  margin-bottom: 20px;
}

.smoke-graph-container{
  width: 50%;
  float: left;
  background-color: #fff; /* White background */
  border-radius: 10px; /* Rounded corners */
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow */
  padding: 20px;
  margin-bottom: 20px;
}

.fpv-container {
  width: 25%;
  float: left;
  /* padding: 10px; */
  background-color: #fff; /* White background */
  border-radius: 10px; /* Rounded corners */
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow */
  /* padding: 20px;
  margin-bottom: 20px;
  margin-left: 20px; */

}

.flir-container{
  width: 25%;
  float: left;
  padding: 10px;
  background-color: #fff; /* White background */
  border-radius: 10px; /* Rounded corners */
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow */
  padding: 20px;
  margin-bottom: 20px;
  margin-left: 20px;
  
}

.temp-graph-container{
  width: 25%;
  padding: 10px;
  background-color: #fff; /* White background */
  border-radius: 10px; /* Rounded corners */
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow */
  padding: 20px;
  margin-bottom: 20px;
  margin-left: 20px;
}

.smoke-graph {
  width: 100%;
  height: 500px;  
  padding: 20px;
}

.fpv-stream {
  width: 100%;
  height: 500px; 
  padding: 20px;
}
.gps-container{
  clear: 'both';
  width: 20%;
  text-align: right;
  background-color: #fff; /* White background */
  border-radius: 10px; /* Rounded corners */
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow */
  padding: 20px;
  margin-bottom: 20px;
  margin-left: 20px;
}

.empty-container {
  width: 80%;
}



/* @media (min-width: 576px) {
  .container, .container-sm {
      max-width: 540px;
  }
}

@media (min-width: 1000px) {
  .container, .container-sm {
      max-width: 1600px;
  }
} */

